--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div> <button>actualizacionnn</button></div>
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Navbar</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
